--- a/assets/html/heroku_timeout.html
+++ b/assets/html/heroku_timeout.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="../styles/timeout_styles.css">
+    <link rel="stylesheet" href="../styles/error_page_styles.css">
   </head>
   <body>
 
-  <div class="container">
+  <div class="container timeout">
     <img class="logo" src="../images/timeout/QuillLogoTimeout.svg">
     <div class="content">
       <div class="text">
@@ -17,7 +17,7 @@
 
         <button onclick="refreshPage()">Refresh Page</button>
 
-        <p class="contact-us">If you keep seeing this page or if you need help, you can call us at <span>646-442-1095</span> or email us at <span>hello@quill.org</span></p>
+        <p class="contact-us">If you keep seeing this page or if you need help, you can call us at <span class="contact-info">646-442-1095</span> or email us at <span class="contact-info">hello@quill.org</span></p>
       </div>
 
       <div class="illustration">
