--- a/assets/html/upgrading.html
+++ b/assets/html/upgrading.html
@@ -13,7 +13,7 @@
 
         <p class="return-time">We'll be back up in 15 - 30 minutes.</p>
 
-        <p><span class="dont-worry">Don’t worry!</span> Quill always saves student progress. Once Quill is back online, students should resume an activity to complete and save it.</p>
+        <p><span class="dont-worry">Don't worry!</span> Quill always saves student progress. Once Quill is back online, students should resume an activity to complete and save it.</p>
 
         <a class="learn-more" href="http://support.quill.org/technical-questions/what-is-happening-when-quill-is-upgrading">Learn More</a>
 
