--- a/assets/html/upgrading.html
+++ b/assets/html/upgrading.html
@@ -15,7 +15,7 @@
 
         <p><span class="dont-worry">Don't worry!</span> Quill always saves student progress. Once Quill is back online, students should resume an activity to complete and save it.</p>
 
-        <a class="learn-more" href="http://support.quill.org/technical-questions/what-is-happening-when-quill-is-upgrading">Learn More</a>
+        <a class="learn-more" href="https://support.quill.org/technical-questions/what-is-happening-when-quill-is-upgrading">Learn More</a>
 
         <p>If you keep seeing this page or if you need help, you can call us at <span class="contact-info">646-442-1095</span> or email us at <a href="mailto:hello@quill.org" class="contact-info">hello@quill.org</a>.</p>
       </div>
